<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto"
      xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_site"
        android:title="@string/action_site"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="1000"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_24dp"
        appcompat:showAsAction="ifRoom"/>

</menu>