<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:paddingBottom="16dp"
                                             android:background="@color/white">


        <TextView
            android:id="@+id/tv_sellerLocationTitle"
            style="@style/Text_Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/warranty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_w1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sellerLocationTitle">

        <TextView
            android:id="@+id/tv_w1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Body1"
            android:text="@string/warranty_mercadoPagoTitle"/>

        <TextView
            android:id="@+id/tv_w1Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Caption"
            android:text="@string/warranty_mercadoPagoDescription"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_w2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_w1">

        <TextView
            android:id="@+id/tv_w2Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Body1"
            android:text="@string/warranty_customTitle"/>

        <TextView
            android:id="@+id/tv_w2Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text_Caption"
            android:text=""/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>